Fixed overlapping elements on mobile screen size

--- a/css/main.css
+++ b/css/main.css
@@ -5,6 +5,14 @@
 
     overflow: inherit !important;
 
+    height: auto !important;
+
+}
+
+.disabled-onepage-scroll section.contact {
+
+    margin-top: 20%;
+
 }
 
 section {
